syntax = "proto3";
package cs6650.kvstore;




message KvMessage {
    enum KvMessageType {
        getReq = 0;
        getRes = 1;

        putReq = 2;
        putRes = 3;

        deleteReq = 4;
        deleteRes = 5;
    }

    KvMessageType msgType = 1;
    string key = 2;
    string value = 3;
    string status = 4;
    string message = 5;
    string tpcOpId = 6; 

    int32 commitIndex = 9;

    int32 clientId = 7;

    bool vote = 8;

}

message LogEntries {
    repeated KvMessage entries = 1;
}


message Empty {

}


service KvStoreService {
    rpc put(KvMessage) returns (KvMessage);
    rpc get(KvMessage) returns (KvMessage);
    rpc delete(KvMessage) returns (KvMessage);

    // two pc rpc
    rpc prepare(KvMessage) returns (KvMessage);
    rpc commit(KvMessage) returns (KvMessage);
    rpc abort(KvMessage) returns (KvMessage);

    rpc sync(LogEntries) returns (KvMessage);

    // Paxos rpc
    rpc startPaxos(KvMessage) returns (KvMessage);
    rpc accept(KvMessage) returns (KvMessage);

}



service TpcManagerService {
    rpc startTpc(KvMessage) returns (KvMessage);
}